- styles refactoring  - prevent text shift  - update readme commands

--- a/src/components/Email/styles.pcss
+++ b/src/components/Email/styles.pcss
@@ -1,9 +1,7 @@
 .email {
   display: flex;
-  height: 24px;
   max-width: calc(100% - 14px);
-  line-height: 24px;
-  margin: 0 8px 4px 0!important;
+  margin: 0 8px 4px 0;
 
   &.email--valid {
     background-color: $colors.emailValidBg;
