--- a/src/components/EmailsEditor/styles.pcss
+++ b/src/components/EmailsEditor/styles.pcss
@@ -4,17 +4,15 @@
   width: 100%;
   height: 100%;
   min-width: 144px;
+  margin: 0;
+  padding: 0;
 
-  div,
-  textarea,
-  b,
-  h2,
-  span,
-  button {
-    margin: 0;
-    padding: 0;
-    font-family: 'Open Sans', sans-serif;
+  div, h2, span, button, textarea {
     box-sizing: border-box;
+  }
+
+  h2, span, button, textarea {
+    font-family: 'Open Sans', sans-serif;
   }
 
   textarea,
@@ -37,36 +35,36 @@
 
   textarea {
     resize: none;
+    padding: 0;
   }
+}
 
-  .input-container {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    width: 100%;
-    height: 100%;
-    padding: 8px 7px;
-    overflow-y: auto;
-    background: $colors.primaryBg;
-    border: 1px solid $colors.border;
-    border-radius: 4px;
-    cursor: text;
-  }
+.input-container {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  width: 100%;
+  height: 100%;
+  padding: 8px 7px;
+  overflow-y: auto;
+  background: $colors.primaryBg;
+  border: 1px solid $colors.border;
+  border-radius: 4px;
+  cursor: text;
+}
 
-  .input {
-    width: 130px;
-    min-width: 130px;
-    height: 24px;
-    overflow: hidden;
-    line-height: 24px;
-  }
+.input {
+  width: 130px;
+  min-width: 130px;
+  height: 24px;
+  overflow: hidden;
+}
 
-  .hidden-input {
-    position: absolute;
-    max-width: calc(100% - 14px);
-    visibility: hidden;
-    z-index: -1;
-    word-wrap: break-word;
-  }
+.hidden-input {
+  position: absolute;
+  max-width: calc(100% - 14px);
+  visibility: hidden;
+  z-index: -1;
+  word-wrap: break-word;
 }
